# vm

./: .gitignore  CMakeLists.txt  readme.md
include/: image_loader.h  operations.h  vm.h
src/: image_loader.c  operations.c  vm.c
